# terminal_weather

./: .gitignore  Cargo.toml  README.md
src/: main.rs
