[package]
name = "terminal_weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = "0.28.0"
tui-input = "0.10.0"
json = "0.12.4"
reqwest = "0.12.5"
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "macros"] }
tokio-macros = "2.4.0"